[build-system] 
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pi" 
version = "0.1.0" 
dependencies = [
  "pipython",
  "hardware_device_base@git+https://github.com/COO-Utilities/hardware_device_base"
]
requires-python = ">=3.9"
authors = [
  {name = "Michael Langmayr", email = "langmayr@caltech.edu"}
]
maintainers = [
  {name = "Michael Langmayr", email = "langmayr@caltech.edu"}
]
description = "Low-level Python library to control PI 863 and PI 663 motion controllers using the [pipython](https://pypi.org/project/pipython/) library."
readme = "README.md" 
license = "MIT"

[project.urls]
# Various URLs related to your project. These links are displayed on PyPI.
# Homepage = "https://example.com" 
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/COO-Utils/pi"
# "Bug Tracker" = "https://github.com/yourusername/your-repo/issues" 
# Changelog = "https://github.com/yourusername/your-repo/blob/master/CHANGELOG.md" 

[project.optional-dependencies]
# Optional dependencies that can be installed with extra tags, like "dev".
dev = [
  "pytest", 
  "black",
  "flake8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["pi"]

[tool.setuptools.package-dir]
pi = "."
